--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
         <p class="game-tagline">Catch the good drops, avoid the bad ones!</p>
         <div class="score-panel">
             <div class="score">Score: <span id="score">0</span></div>
+            <div class="high-score">High Score: <span id="high-score">0</span></div>
             <div class="timer">Time: <span id="time">30</span>s</div>
             <button id="start-btn">Start Game</button>
         </div>
         
         <div id="game-container">
+        </div>
+        <div id="game-over-message" class="game-over" style="display: none;">
+            <p id="final-message">Game Over! Final Score: <span id="final-score">0</span></p>
+            <p id="win-lose-message"></p>
         </div>
     </div>
     
